# ChangeLog for dev-util/pitz
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pitz-9999 (13 Feb 2010)

  13 Feb 2010; James Rowe <jnrowe@gmail.com> +pitz-9999.ebuild,
  +files/pitz-9999-build_fixes.patch, +metadata.xml:
  Initial ebuild, by me.
