@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX pitz-9999-build_fixes.patch 725 RMD160 83e99e5d9f7220556ea4dbf6cb430e48ca78afa4 SHA1 0970a0dc6dc6f1485281b880166adb1f92297d42 SHA256 1ac5b27afb94e702dada3f2e3ff4fa08877d83c9e79c9139464c72be8ba482a5
-EBUILD pitz-9999.ebuild 825 RMD160 4c035e33946859e676c3438ec71393ad09b474dc SHA1 f4e53bbe19140fd8eb33d12a839e399b6264934b SHA256 db7d39126670a536cc955f1cb6dd1110bb471334ab252571046cbf49d29358a5
-MISC ChangeLog 283 RMD160 7d057cd68a6d65e1f4566f9cb03cf4f00b9ed069 SHA1 b419f33d2a75c474348d0906afd75cb90d60a867 SHA256 4069f45cd86d802bd7e1fb9127a455f03f8458cecca8ad54dc497e7d238515f3
+AUX pitz-9999-build_fixes.patch 602 RMD160 11f77a03084fd53da269dd23f77de4d100cfdcd3 SHA1 a27b293fa1d23d567382674ecb242e6bf058521a SHA256 21818ab01b818c391e325b481b90090f2f76a422a2b1050b04d2a8156eae9c2a
+EBUILD pitz-9999.ebuild 944 RMD160 9f4a0957f0ff3dadc379132b7565db852f654156 SHA1 514791acbf6f5e1bc34f848428389cb388fcd133 SHA256 dc39351148287eadee77ae96dbb29c6d899b4f4babf945ef7db8f7cc8d949080
+MISC ChangeLog 409 RMD160 b2e22dd2c793b006081806b2a589568b17b732c0 SHA1 9a507419889b72283abcdd0a84d196799e3be194 SHA256 1f25b17df702a6364b98f27e2af387ebb0b362395e5d0241e23ddf1c6e4285b9
 MISC metadata.xml 979 RMD160 414374773f226afe6395e0889dd502b289f5d2c7 SHA1 b9e5c540c389c2bf393f9fc642f1b67aa1b1082f SHA256 1acbfc415be62284237275cab78de1d4261cdbe8a99088dc334e8dceae722682
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt2CzUACgkQzJrj3cAXR0kOtgCggfFuxhmhwwruqlOvO/vTrt+1
-vjYAn2q5AE80M+1HpcXY7Pfri6S8ZQjA
-=LxqV
+iEYEARECAAYFAkt2nJIACgkQzJrj3cAXR0lgWACgj1YVgmpQp9flaoWnbBenNVZi
+RJEAoJBNy8T9xtyJNj1gNe4vUaCCevfT
+=IhpW
 -----END PGP SIGNATURE-----
