@@ -4,6 +4,8 @@
 
 EAPI="2"
 SUPPORT_PYTHON_ABIS="1"
+# Commented until tests are enabled again
+#DISTUTILS_SRC_TEST="nosetests"
 
 inherit distutils eutils git
 
@@ -15,20 +17,20 @@ HOMEPAGE="http://pitz.tplus1.com/"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="test"
+IUSE=""
+# Tests currently require unavailable mock version
+RESTRICT="test"
 
+DEPEND="dev-python/setuptools"
+# Tests: test? ( ${RDEPEND} =dev-python/mock-0.4* )
 # Setuptools is needed in RDEPEND for wrapper scripts.
 RDEPEND="dev-python/clepy
 	dev-python/ipython
 	dev-python/jinja2
-	dev-python/mock
 	dev-python/pyyaml
 	dev-python/setuptools
 	dev-python/tempita"
-DEPEND="dev-python/setuptools
-	test? ( ${RDEPEND} )"
 
-DISTUTILS_SRC_TEST="nosetests"
 RESTRICT_PYTHON_ABIS="2.4 3.*"
 DISTUTILS_DISABLE_VERSIONING_OF_PYTHON_SCRIPTS=true
 
