@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Feb 2010; James Rowe <jnrowe@gmail.com> pitz-9999.ebuild:
+  Restrict tests as they require unavailable version of mock.
+
 *pitz-9999 (13 Feb 2010)
 
   13 Feb 2010; James Rowe <jnrowe@gmail.com> +pitz-9999.ebuild,
